--- a/index.html
+++ b/index.html
@@ -284,41 +284,37 @@ http://www.templatemo.com/tm-394-sonic
 				<div class="row">
 					<div class="col-md-12">
 						<div class="section-title">
-							<h2> Phase Three (Under Construction)</h2>
+							<h2> Phase Three</h2>
 						</div> <!-- /.section-title -->
 					</div> <!-- /.col-md-12 -->
 				</div> <!-- /.row -->
-				<div class="row">
+
+				<div class="row p3desc">
 					<div class="col-md-12">
-						<div class="map-holder">
-							<div class="google-map-canvas" id="map-canvas">
-                    		</div>
-						</div> <!-- /.map-holder -->
-					</div> <!-- /.col-md-12 -->
-				</div> <!-- /.row -->
-				<div class="row contact-form">
-					<div class="col-md-4">
-						<label for="name-id" class="required">Name:</label>
-						<input name="name-id" type="text" id="name-id" maxlength="40">
-					</div> <!-- /.col-md-4 -->
-					<div class="col-md-4">
-						<label for="email-id" class="required">Email:</label>
-						<input name="email-id" type="text" id="email-id" maxlength="40">
-					</div> <!-- /.col-md-4 -->
-					<div class="col-md-4">
-						<label for="subject-id">Subject:</label>
-						<input name="subject-id" type="text" id="subject-id" maxlength="60">
-					</div> <!-- /.col-md-4 -->
-					<div class="col-md-12">
-						<label for="message-id" class="required">Message:</label>
-						<textarea name="message-id" id="message-id" rows="6"></textarea>
-					</div> <!-- /.col-md-12 -->
-					<div class="col-md-12">
-						<div class="submit-btn">
-							<a href="#" class="largeButton contactBgColor">Send Message</a>
-						</div> <!-- /.submit-btn -->
-					</div> <!-- /.col-md-12 -->
+						<h3>Interactive Protoype</h3>
+						<p> The functionality of our prototype relies on Firebase, which allows it to save and use data, as well as have its interactive component.
+							Users go through the Google authentication system, and then can use the site to post or answer questions anonymously. 
+							We implemented these features by connecting our Firebase set up to our site, and allows reading and writing to Firestore as the user navigates the system.
+							The category pages represent the network for our system, and for now, most of the posts on the site live within the 'politics' category. 
+							To test navigation of the system, click 'politics' in the sidebar, as some of the other categories have no posts yet.</p>
+
+						<p> Additionally, we began drafting our paper using the CHI guidelines, with references to papers we read in phase one, and other papers we have found since then. The draft can be found below. 
+					</div>
 				</div>
+
+				<div class="row links">
+					<div class="col-md-6">
+						<div class="draft-item">
+							<div class="draft-icon">
+								<i class="fa fa-file-text fa-2x"></i>
+							</div>
+							<div class="draft-content">
+								<h3> <a href="./assets/tapestryCHI.pdf"> Tapestry: <br> An Anonymous Storytelling Platform </a></h3>
+							</div>
+						</div> <!-- /.draft-item -->
+					</div> <!-- /.col-md-4 -->
+				</div>
+			
 			</div> <!-- /#contact -->
 
 		</div> <!-- /.container-fluid -->
